# zakupator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
deploy/: zakupator.service
docs/: ADAPTERS.md  ARCHITECTURE.md  SPEC.md  recon.md
scripts/: capture_fixtures.py  check.sh  smoke_adapters.py
src/zakupator/: __main__.py  bot.py  callbacks.py  cart_repo.py  config.py  constants.py  db.py  matching.py  middleware.py  models.py  net.py  response_cache.py  search.py  search_cache.py
src/zakupator/adapters/: auchan.py  base.py  metro.py  vkusvill.py
src/zakupator/bot/: __init__.py  handlers.py  presentation.py
tests/: conftest.py  test_adapter_auchan.py  test_adapter_metro.py  test_adapter_vkusvill.py  test_bot_formatters.py  test_cart_repo.py  test_matching.py  test_net.py  test_response_cache.py  test_search_cache.py  test_search_engine.py
tests/fixtures/: auchan_autohints.json  metro_graphql.json  vkusvill_search.html
