[project]
name = "zakupator"
version = "0.0.1"
description = "Telegram bot that compares grocery prices across RU delivery services"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.6",
    "selectolax>=0.3.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "playwright>=1.42",
    "ipython",
    "rich",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: makes real network calls to grocery services (skipped by default)",
]
# By default skip live-network tests. Run them explicitly with:
#   pytest -m live
addopts = "-m 'not live'"
testpaths = ["tests"]
