[project]
name = "zakupator"
version = "0.1.0"
description = "Telegram bot that compares grocery prices across RU delivery services"
requires-python = ">=3.12"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "zakupator contributors" }]
dependencies = [
    "aiogram>=3.4",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.6",
    "selectolax>=0.3.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "playwright>=1.42",
    "ipython",
    "rich",
    "mypy>=1.10",
    "ruff>=0.5",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "semgrep>=1.75",
    "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zakupator = ["py.typed"]

# ---- Ruff (lint + format) ------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Focused on correctness and typing hygiene; style is handled by the formatter.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "PL",   # pylint subset
    "RUF",  # ruff-specific
    "C4",   # comprehensions
    "PIE",  # misc cleanups
    "TCH",  # type-checking imports
    "PTH",  # pathlib
    "ASYNC",
]
ignore = [
    "E501",    # line length handled by the formatter
    "PLR0913", # too many args — common in handlers/adapters
    "PLR0912", # too many branches
    "PLR0911", # too many return statements
    "PLR0915", # too many statements
    "PLR2004", # magic numbers — a handful are deliberate
    "SIM108",  # ternary not always clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "B011", "S101"]
"scripts/**/*.py" = ["T20"]

[tool.ruff.lint.isort]
known-first-party = ["zakupator"]

# ---- mypy (strict on src/) -----------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/zakupator"]
# Tests are deliberately untyped (fixtures & mocks).

[[tool.mypy.overrides]]
module = [
    "selectolax.*",
    "rapidfuzz.*",
]
ignore_missing_imports = true

# ---- bandit (SAST) -------------------------------------------------------

[tool.bandit]
exclude_dirs = ["tests", ".venv", "scripts"]

# ---- pytest --------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: makes real network calls to grocery services (skipped by default)",
]
# By default skip live-network tests. Run them explicitly with:
#   pytest -m live
addopts = "-m 'not live'"
testpaths = ["tests"]
